--- a/stable/prometheus-operator/templates/prometheus/ingress.yaml
+++ b/stable/prometheus-operator/templates/prometheus/ingress.yaml
@@ -21,7 +21,7 @@ spec:
     - host: {{ . }}
       http:
         paths:
-          - path: "{{ $routePrefix }}"
+          - path: "/prometheus"
             backend:
               serviceName: {{ $serviceName }}
               servicePort: 9090
