--- a/stable/prometheus-operator/values.yaml
+++ b/stable/prometheus-operator/values.yaml
@@ -22,7 +22,7 @@ defaultRules:
   create: true
   rules:
     alertmanager: true
-    etcd: true
+    etcd: false
     general: true
     k8s: true
     kubeApiserver: true
@@ -133,24 +133,28 @@ alertmanager:
   #           {{ end }}
 
   ingress:
-    enabled: false
+    enabled: true
 
-    annotations: {}
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
+      nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
+      nginx.ingress.kubernetes.io/rewrite-target: /
 
     labels: {}
 
     ## Hosts must be provided if Ingress is enabled.
     ##
-    hosts: []
-      # - alertmanager.domain.com
+    hosts:
+      - ops.installer.alcide.io
 
     ## TLS configuration for Alertmanager Ingress
     ## Secret must be manually created in the namespace
     ##
-    tls: []
-    # - secretName: alertmanager-general-tls
-    #   hosts:
-    #   - alertmanager.example.com
+    tls:
+    - secretName: ops-tls
+      hosts:
+      - ops.installer.alcide.io
 
   ## Configuration for Alertmanager service
   ##
@@ -305,7 +309,14 @@ alertmanager:
 ## Using default values from https://github.com/helm/charts/blob/master/stable/grafana/values.yaml
 ##
 grafana:
+
   enabled: true
+
+  env:
+    GF_AUTH_BASIC_ENABLED: "false"
+    GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
+    GF_AUTH_ANONYMOUS_ENABLED: "true"
+    GF_SERVER_ROOT_URL: "https://ops.installer.alcide.io/grafana"
 
   ## Deploy default dashboards.
   ##
@@ -316,13 +327,15 @@ grafana:
   ingress:
     ## If true, Prometheus Ingress will be created
     ##
-    enabled: false
+    enabled: true
 
     ## Annotations for Prometheus Ingress
     ##
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
+      nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
+      nginx.ingress.kubernetes.io/rewrite-target: /
 
     ## Labels to be added to the Ingress
     ##
@@ -333,15 +346,18 @@ grafana:
     ##
     # hosts:
     #   - prometheus.domain.com
-    hosts: []
+    hosts:
+      - ops.installer.alcide.io
+
+    path: /grafana
 
     ## TLS configuration for prometheus Ingress
     ## Secret must be manually created in the namespace
     ##
-    tls: []
-    # - secretName: prometheus-general-tls
-    #   hosts:
-    #   - prometheus.example.com
+    tls:
+      - secretName: ops-tls
+        hosts:
+          - ops.installer.alcide.io
 
   sidecar:
     dashboards:
@@ -442,7 +458,7 @@ kubeControllerManager:
 ## Component scraping coreDns. Use either this or kubeDns
 ##
 coreDns:
-  enabled: true
+  enabled: false
   service:
     port: 9153
     targetPort: 9153
@@ -452,7 +468,7 @@ coreDns:
 ## Component scraping kubeDns. Use either this or coreDns
 ##
 kubeDns:
-  enabled: false
+  enabled: true
   service:
     selector:
       k8s-app: kube-dns
@@ -787,8 +803,14 @@ prometheus:
     maxUnavailable: ""
 
   ingress:
-    enabled: false
-    annotations: {}
+    enabled: true
+
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
+      nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
+      nginx.ingress.kubernetes.io/rewrite-target: /
+
     labels: {}
 
     ## Hostnames.
@@ -796,15 +818,16 @@ prometheus:
     ##
     # hosts:
     #   - prometheus.domain.com
-    hosts: []
+    hosts:
+      - ops.installer.alcide.io
 
     ## TLS configuration for Prometheus Ingress
     ## Secret must be manually created in the namespace
     ##
-    tls: []
-      # - secretName: prometheus-general-tls
-      #   hosts:
-      #     - prometheus.example.com
+    tls:
+      - secretName: ops-tls
+        hosts:
+          - ops.installer.alcide.io
 
   serviceMonitor:
     selfMonitor: true
@@ -858,7 +881,7 @@ prometheus:
 
     ## External URL at which Prometheus will be reachable.
     ##
-    externalUrl: ""
+    externalUrl: "https://ops.installer.alcide.io/prometheus"
 
     ## Define which Nodes the Pods are scheduled on.
     ## ref: https://kubernetes.io/docs/user-guide/node-selection/
