--- a/stable/prometheus-operator/values.yaml
+++ b/stable/prometheus-operator/values.yaml
@@ -950,7 +950,7 @@ prometheus:
 
     ## How long to retain metrics
     ##
-    retention: 10d
+    retention: 30d
 
     ## If true, the Operator won't process any Prometheus configuration changes
     ##
@@ -1117,83 +1117,257 @@ prometheus:
     ##
     additionalScrapeConfigsExternal: false
 
-  additionalServiceMonitors: []
-  ## Name of the ServiceMonitor to create
-  ##
-  # - name: ""
+  additionalServiceMonitors:
+  # Name of the ServiceMonitor to create
+  #
+   - name: "telexporter"
 
-    ## Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
-    ## the chart
-    ##
-    # additionalLabels: {}
+    # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
+    # the chart
+    #
+     additionalLabels: {}
 
-    ## Service label for use in assembling a job name of the form <label value>-<port>
-    ## If no label is specified, the service name is used.
-    ##
-    # jobLabel: ""
+    # Service label for use in assembling a job name of the form <label value>-<port>
+    # If no label is specified, the service name is used.
+    #
+     jobLabel: ""
 
-    ## Label selector for services to which this ServiceMonitor applies
-    ##
-    # selector: {}
+    # Label selector for services to which this ServiceMonitor applies
+    #
+     selector:
+       matchLabels:
+         metrics: alcide
 
-    ## Namespaces from which services are selected
-    ##
-    # namespaceSelector:
-      ## Match any namespace
-      ##
-      # any: false
+    # Namespaces from which services are selected
+    #
+     namespaceSelector:
+      # Match any namespace
+      #
+       any: false
 
-      ## Explicit list of namespace names to select
-      ##
-      # matchNames: []
+      # Explicit list of namespace names to select
+      #
+       matchNames:
+         - "alcide"
 
-    ## Endpoints of the selected service to be monitored
-    ##
-    # endpoints: []
-      ## Name of the endpoint's service port
-      ## Mutually exclusive with targetPort
-      # - port: ""
+    # Endpoints of the selected service to be monitored
+    #
+     endpoints:
+      # Name of the endpoint's service port
+      # Mutually exclusive with targetPort
+       - port: "http"
 
-      ## Name or number of the endpoint's target port
-      ## Mutually exclusive with port
-      # - targetPort: ""
+      # Name or number of the endpoint's target port
+      # Mutually exclusive with port
+       - targetPort: "8080"
 
-      ## File containing bearer token to be used when scraping targets
-      ##
-      #   bearerTokenFile: ""
+      # File containing bearer token to be used when scraping targets
+      #
+         bearerTokenFile: ""
 
-      ## Interval at which metrics should be scraped
-      ##
-      #   interval: 30s
+      # Interval at which metrics should be scraped
+      #
+         interval: 10s
 
-      ## HTTP path to scrape for metrics
-      ##
-      #   path: /metrics
+      # HTTP path to scrape for metrics
+      #
+         path: /metrics
 
-      ## HTTP scheme to use for scraping
-      ##
-      #   scheme: http
+      # HTTP scheme to use for scraping
+      #
+         scheme: http
 
-      ## TLS configuration to use when scraping the endpoint
-      ##
-      #   tlsConfig:
+   - name: "kafka"
 
-          ## Path to the CA file
-          ##
-          # caFile: ""
+     # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
+     # the chart
+     #
+     additionalLabels: {}
 
-          ## Path to client certificate file
-          ##
-          # certFile: ""
+     # Service label for use in assembling a job name of the form <label value>-<port>
+     # If no label is specified, the service name is used.
+     #
+     jobLabel: ""
 
-          ## Skip certificate verification
-          ##
-          # insecureSkipVerify: false
+     # Label selector for services to which this ServiceMonitor applies
+     #
+     selector:
+       matchLabels:
+         metrics: kafka
 
-          ## Path to client key file
-          ##
-          # keyFile: ""
+     # Namespaces from which services are selected
+     #
+     namespaceSelector:
+       # Match any namespace
+       #
+       any: false
 
-          ## Server name used to verify host name
-          ##
-          # serverName: ""
+       # Explicit list of namespace names to select
+       #
+       matchNames:
+         - "alcide"
+
+     # Endpoints of the selected service to be monitored
+     #
+     endpoints:
+       # Name of the endpoint's service port
+       # Mutually exclusive with targetPort
+       - port: "http"
+
+       # Name or number of the endpoint's target port
+       # Mutually exclusive with port
+       - targetPort: "7070"
+
+         # File containing bearer token to be used when scraping targets
+         #
+         bearerTokenFile: ""
+
+         # Interval at which metrics should be scraped
+         #
+         interval: 10s
+
+         # HTTP path to scrape for metrics
+         #
+         path: /metrics
+
+         # HTTP scheme to use for scraping
+         #
+         scheme: http
+
+   - name: "cassandra"
+
+     # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
+     # the chart
+     #
+     additionalLabels: {}
+
+     # Service label for use in assembling a job name of the form <label value>-<port>
+     # If no label is specified, the service name is used.
+     #
+     jobLabel: ""
+
+     # Label selector for services to which this ServiceMonitor applies
+     #
+     selector:
+       matchLabels:
+         metrics: cassandra
+
+     # Namespaces from which services are selected
+     #
+     namespaceSelector:
+       # Match any namespace
+       #
+       any: false
+
+       # Explicit list of namespace names to select
+       #
+       matchNames:
+         - "alcide"
+
+     # Endpoints of the selected service to be monitored
+     #
+     endpoints:
+       # Name of the endpoint's service port
+       # Mutually exclusive with targetPort
+       - port: "http"
+
+       # Name or number of the endpoint's target port
+       # Mutually exclusive with port
+       - targetPort: "7070"
+
+         # File containing bearer token to be used when scraping targets
+         #
+         bearerTokenFile: ""
+
+         # Interval at which metrics should be scraped
+         #
+         interval: 10s
+
+         # HTTP path to scrape for metrics
+         #
+         path: /metrics
+
+         # HTTP scheme to use for scraping
+         #
+         scheme: http
+
+   - name: "e2e-metricsgw"
+
+     # Additional labels to set used for the ServiceMonitorSelector. Together with standard labels from
+     # the chart
+     #
+     additionalLabels: {}
+
+     # Service label for use in assembling a job name of the form <label value>-<port>
+     # If no label is specified, the service name is used.
+     #
+     jobLabel: ""
+
+     # Label selector for services to which this ServiceMonitor applies
+     #
+     selector:
+       matchLabels:
+         metrics: e2e-metricsgw
+
+     # Namespaces from which services are selected
+     #
+     namespaceSelector:
+       # Match any namespace
+       #
+       any: false
+
+       # Explicit list of namespace names to select
+       #
+       matchNames:
+         - "alcide"
+
+     # Endpoints of the selected service to be monitored
+     #
+     endpoints:
+       # Name of the endpoint's service port
+       # Mutually exclusive with targetPort
+       - port: "http"
+
+       # Name or number of the endpoint's target port
+       # Mutually exclusive with port
+       - targetPort: "9091"
+
+         # File containing bearer token to be used when scraping targets
+         #
+         bearerTokenFile: ""
+
+         # Interval at which metrics should be scraped
+         #
+         interval: 60s
+
+         # HTTP path to scrape for metrics
+         #
+         path: /metrics
+
+         # HTTP scheme to use for scraping
+         #
+         scheme: http
+
+#      # TLS configuration to use when scraping the endpoint
+#      #
+#         tlsConfig:
+#
+#          # Path to the CA file
+#          #
+#           caFile: ""
+#
+#          # Path to client certificate file
+#          #
+#           certFile: ""
+#
+#          # Skip certificate verification
+#          #
+#           insecureSkipVerify: false
+#
+#          # Path to client key file
+#          #
+#           keyFile: ""
+#
+#          # Server name used to verify host name
+#          #
+#           serverName: ""
