--- a/stable/prometheus-operator/templates/prometheus/rules/alcide-infra.rules.yaml
+++ b/stable/prometheus-operator/templates/prometheus/rules/alcide-infra.rules.yaml
@@ -1,28 +1,41 @@
-{{ define "alcide-infra.rules.yaml.tpl" }}
+apiVersion: {{ printf "%s/v1" (.Values.prometheusOperator.crdApiGroup | default "monitoring.coreos.com") }}
+kind: PrometheusRule
+metadata:
+  name: {{ printf "%s-%s" (include "prometheus-operator.fullname" .) "alcide-infra.rules" | trunc 63 | trimSuffix "-" }}
+  labels:
+    app: {{ template "prometheus-operator.name" . }}
+{{ include "prometheus-operator.labels" . | indent 4 }}
+{{- if .Values.defaultRules.labels }}
+{{ toYaml .Values.defaultRules.labels | indent 4 }}
+{{- end }}
+{{- if .Values.defaultRules.annotations }}
+  annotations:
+{{ toYaml .Values.defaultRules.annotations | indent 4 }}
+{{- end }}
+spec:
+  groups:
+    - name: alcide-infra.rules
+      rules:
+      - alert: AlcidePodRestart
+        expr: increase(kube_pod_container_status_restarts{namespace="alcide",container!="e2e",container!="agent-stability-test-tcps", container!="nodelet"}[5m]) > 0
+        labels:
+            severity: error
+        annotations:
+            description: Alcide entity {{`{{ $labels.namespace }}`}}/{{`{{ $labels.pod_name }}`}} was restarted {{`{{ $value }}`}}
+                times within the last 5 minutes
+      - alert: AlcidePodHighMemory
+        expr: sum by (pod_name) (container_memory_usage_bytes{namespace="alcide",container_name!~".*kafka.*|.*cassandra.*|.*fluentd.*|.*dcvisor.*|POD",pod_name!~"dcvisor.*"} / container_spec_memory_limit_bytes{namespace="alcide",container_name!~".*kafka.*|.*cassandra.*|.*fluentd.*|POD",pod_name!~"dcvisor.*"} * 100) !=+inf > 95
+        for: 10m
+        labels:
+            severity: critical
+        annotations:
+            description: Alcide entity {{`{{ $labels.pod_name }}`}} is consuming {{`{{ $value }}`}} percent of its allocated memory for more than 10 minutes
 
-- name: alcide-infra.rules
-  rules:
-  - alert: AlcidePodRestart
-    expr: increase(kube_pod_container_status_restarts{namespace="alcide",container!="e2e",container!="agent-stability-test-tcps", container!="nodelet"}[5m]) > 0
-    labels:
-      severity: error
-    annotations:
-      description: Alcide entity {{`{{ $labels.namespace }}`}}/{{`{{ $labels.pod_name }}`}} was restarted {{`{{ $value }}`}}
-        times within the last 5 minutes
-  - alert: AlcidePodHighMemory
-    expr: sum by (pod_name) (container_memory_usage_bytes{namespace="alcide",container_name!~".*kafka.*|.*cassandra.*|.*fluentd.*|.*dcvisor.*|POD",pod_name!~"dcvisor.*"} / container_spec_memory_limit_bytes{namespace="alcide",container_name!~".*kafka.*|.*cassandra.*|.*fluentd.*|POD",pod_name!~"dcvisor.*"} * 100) !=+inf > 95
-    for: 10m
-    labels:
-      severity: critical
-    annotations:
-      description: Alcide entity {{`{{ $labels.pod_name }}`}} is consuming {{`{{ $value }}`}} percent of its allocated memory for more than 10 minutes
-
-  - alert: PvcDiskRunningFullIn6Hours
-    expr: predict_linear(kubelet_volume_stats_available_bytes[90m], 3600 * 6) < 0
-    for: 30m
-    labels:
-      severity: critical
-    annotations:
-      description: Persistent Volume Claim {{`{{ $labels.persistentvolumeclaim }}`}} on node {{`{{ $labels.instance }}`}} is running
-        full within the next 12 hours
-{{ end }}
+      - alert: PvcDiskRunningFullIn6Hours
+        expr: predict_linear(kubelet_volume_stats_available_bytes[90m], 3600 * 6) < 0
+        for: 30m
+        labels:
+            severity: critical
+        annotations:
+            description: Persistent Volume Claim {{`{{ $labels.persistentvolumeclaim }}`}} on node {{`{{ $labels.instance }}`}} is running
+                full within the next 12 hours
