--- a/stable/prometheus-operator/templates/grafana/dashboards/statefulset.yaml
+++ b/stable/prometheus-operator/templates/grafana/dashboards/statefulset.yaml
@@ -26,7 +26,7 @@ data:
 
             ]
         },
-        "editable": false,
+        "editable": true,
         "gnetId": null,
         "graphTooltip": 0,
         "hideControls": false,
