--- a/stable/prometheus-operator/values.yaml
+++ b/stable/prometheus-operator/values.yaml
@@ -110,6 +110,135 @@ alertmanager:
     receivers:
     - name: 'null'
 
+  internalConfig:
+    global:
+      resolve_timeout: 5m
+
+    route:
+      group_by: ['alertname']
+      group_wait: 30s
+      group_interval: 5m
+      repeat_interval: 12h
+
+      # If an alert isn't caught by a route, send it to #infra_alerts channel in slack.
+      receiver: slack_infra_alerts
+
+      routes:
+        - match_re:
+            component: server
+          receiver: slack_server_alerts
+
+        - match_re:
+            component: agent
+          receiver: slack_agent_alerts
+
+        - match_re:
+            component: monitor
+          receiver: slack_monitor_alerts
+
+        - match_re:
+            severity: none
+          receiver: blackhole
+
+    receivers:
+
+      # Throw here every alert you want to show up in alertmanager that shouldn't be sent to slack
+      - name: blackhole
+
+      - name: slack_server_alerts
+        slack_configs:
+          - api_url: SLACK_SERVER_ALERTS_URL
+            channel: '#server_alerts'
+            send_resolved: true
+            title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] ENVIRONMENT - Monitoring Event Notification'
+            text: >-
+              {{ range .Alerts }}
+                *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+              {{ end }}
+      - name: slack_agent_alerts
+        slack_configs:
+          - api_url: SLACK_AGENT_ALERTS_URL
+            channel: '#agent_alerts'
+            send_resolved: true
+            title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] ENVIRONMENT - Monitoring Event Notification'
+            text: >-
+              {{ range .Alerts }}
+                *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+              {{ end }}
+      - name: slack_monitor_alerts
+        slack_configs:
+          - api_url: SLACK_MONITOR_ALERTS_URL
+            channel: '#monitor_alerts'
+            send_resolved: true
+            title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] ENVIRONMENT - Monitoring Event Notification'
+            text: >-
+              {{ range .Alerts }}
+                *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+              {{ end }}
+      - name: slack_infra_alerts
+        slack_configs:
+          - api_url: SLACK_INFRA_ALERTS_URL
+            channel: '#infra_alerts'
+            send_resolved: true
+            title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] ENVIRONMENT - Monitoring Event Notification'
+            text: >-
+              {{ range .Alerts }}
+                *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+              {{ end }}
+  productionConfig:
+    global:
+      resolve_timeout: 5m
+
+    route:
+      group_by: ['alertname']
+      group_wait: 30s
+      group_interval: 5m
+      repeat_interval: 60m
+
+      receiver: slack_production_alerts
+
+      routes:
+        - match_re:
+            severity: none
+          receiver: blackhole
+
+    receivers:
+
+      # Throw here every alert you want to show up in alertmanager that shouldn't be sent to slack
+      - name: blackhole
+
+      - name: slack_production_alerts
+        slack_configs:
+          - api_url: SLACK_PRODUCTION_ALERTS_URL
+            channel: '#production_alerts'
+            send_resolved: true
+            title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] ENVIRONMENT - Monitoring Event Notification'
+            text: >-
+              {{ range .Alerts }}
+                *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+              {{ end }}
+
+
   ## Alertmanager template files to format alerts
   ## ref: https://prometheus.io/docs/alerting/notifications/
   ##      https://prometheus.io/docs/alerting/notification_examples/
