--- a/stable/prometheus-operator/templates/alertmanager/secret.yaml
+++ b/stable/prometheus-operator/templates/alertmanager/secret.yaml
@@ -7,7 +7,11 @@ metadata:
     app: {{ template "prometheus-operator.name" . }}-alertmanager
 {{ include "prometheus-operator.labels" . | indent 4 }}
 data:
-  alertmanager.yaml: {{ toYaml .Values.alertmanager.config | b64enc | quote }}
+  {{ if eq .Values.alertmanager.envType "internal" }}
+  alertmanager.yaml: {{ toYaml .Values.alertmanager.internalConfig | b64enc | quote }}
+  {{ else if eq .Values.alertmanager.envType "production" }}
+  alertmanager.yaml: {{ toYaml .Values.alertmanager.productionConfig | b64enc | quote }}
+  {{- end }}
 {{- range $key, $val := .Values.alertmanager.templateFiles }}
   {{ $key }}: {{ $val | b64enc | quote }}
 {{- end }}
