--- a/stable/prometheus-operator/templates/prometheus/rules/alcide-infra.rules.yaml
+++ b/stable/prometheus-operator/templates/prometheus/rules/alcide-infra.rules.yaml
@@ -1,23 +1,23 @@
 apiVersion: {{ printf "%s/v1" (.Values.prometheusOperator.crdApiGroup | default "monitoring.coreos.com") }}
 kind: PrometheusRule
 metadata:
-    name: {{ printf "%s-%s" (include "prometheus-operator.fullname" .) "alcide-infra.rules" | trunc 63 | trimSuffix "-" }}
-    labels:
-        app: {{ template "prometheus-operator.name" . }}
-        {{ include "prometheus-operator.labels" . | indent 4 }}
-        {{- if .Values.defaultRules.labels }}
-        {{ toYaml .Values.defaultRules.labels | indent 4 }}
-        {{- end }}
-        {{- if .Values.defaultRules.annotations }}
-    annotations:
-        {{ toYaml .Values.defaultRules.annotations | indent 4 }}
-        {{- end }}
+  name: {{ printf "%s-%s" (include "prometheus-operator.fullname" .) "alcide-infra.rules" | trunc 63 | trimSuffix "-" }}
+  labels:
+    app: {{ template "prometheus-operator.name" . }}
+{{ include "prometheus-operator.labels" . | indent 4 }}
+{{- if .Values.defaultRules.labels }}
+{{ toYaml .Values.defaultRules.labels | indent 4 }}
+{{- end }}
+{{- if .Values.defaultRules.annotations }}
+  annotations:
+{{ toYaml .Values.defaultRules.annotations | indent 4 }}
+{{- end }}
 spec:
   groups:
     - name: alcide-infra.rules
       rules:
       - alert: NodeCPUUsageWarning
-        expr:  node:node_cpu_utilisation:avg1m * 100 > 80 and node:node_cpu_utilisation:avg1m * 100 < 90
+        expr:  (node:node_cpu_utilisation:avg1m * 100 > 80) and (node:node_cpu_utilisation:avg1m * 100 < 90)
         for: 5m
         labels:
           severity: warning
@@ -37,7 +37,7 @@ spec:
           description: "Current CPU usage is: {{`{{ $value }}`}}"
 
       - alert: NodeMemoryUsageWarning
-        expr: node:node_memory_utilisation: * 100 > 80 and node:node_memory_utilisation: * 100 < 90
+        expr: (node:node_memory_utilisation: * 100 > 80) and (node:node_memory_utilisation: * 100 < 90)
         for: 5m
         labels:
           severity: warning
