--- a/stable/prometheus-operator/values.yaml
+++ b/stable/prometheus-operator/values.yaml
@@ -234,7 +234,22 @@ alertmanager:
       - name: slack_production_alerts
         slack_configs:
           - api_url: SLACK_PRODUCTION_ALERTS_URL
-            channel: '#production_alerts'
+            channel: '#prod_alerts'
+            send_resolved: true
+            title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] ENVIRONMENT - Monitoring Event Notification'
+            text: >-
+              {{ range .Alerts }}
+                *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+                *Description:* {{ .Annotations.description }}
+                *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+              {{ end }}
+
+      - name: slack_production_alerts_agent
+        slack_configs:
+          - api_url: SLACK_PRODUCTION_ALERTS_AGENT_URL
+            channel: '#prod_alerts_agent'
             send_resolved: true
             title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] ENVIRONMENT - Monitoring Event Notification'
             text: >-
