Add agent prod alerts route

--- a/stable/prometheus-operator/values.yaml
+++ b/stable/prometheus-operator/values.yaml
@@ -227,6 +227,10 @@ alertmanager:
             alertname: Watchdog
           receiver: 'null'
 
+        - match_re:
+            component: agent
+          receiver: slack_production_alerts_agent
+
     receivers:
 
       - name: 'null'
